[package]
name = "linked"
version = "0.1.0"
authors = ["Hyeonu Park <nemo1275@gmail.com>"]

description = "Linked-list with safe O(1) operations"
homepage = "https://github.com/HyeonuPark/linked"
repository = "https://github.com/HyeonuPark/linked.git"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
